2022-10-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha12: Deadpool2';git push
	git tag -a 5.1.1-alpha12 -m '';git push --tags

	* Vertically interpolate all variables whose names start with "tpt" with temperature method

	* ncremap allow vertical interpolation on single dimensional (vertical) files

2022-10-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha11: Tangentially Speaking';git push
	git tag -a 5.1.1-alpha11 -m 'all: stdin requires -o for fl_out; ncap2: stdin reorg';git push --tags

	* Re-organize ncap2 filename handling to treat stdin equivalent to positional in all cases

	* Check stdin for input filenames as last resort not first resort

	* ncks/ncrename/ncatted require -o for output file if stdin for	input (except for MFOs, for backward compatibility)

2022-10-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha10: Jinx Drives Solo';git push
	git tag -a 5.1.1-alpha10 -m 'ncremap nSnowLayers, sgs_frc prs, sgs_nrm prs, Chrysalis paths';git push --tags

	* ncremap add nSnowLayers dimension to pdq_opt for MPAS-SI

	* ncremap fix sgs_frc option handling that 5.1.0 broke for MPAS-SI, CICE

	* ncremap pass sgs_nrm for CICE and not others

2022-10-06  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() print names of missing MPAS mesh variables needed to create mesh

	* Update Chrysalis paths for NCO_PATH_OVERRIDE

2022-10-05  Charlie Zender  <zender@uci.edu>

	* Restrict available synonyms for MALI to mali, pending renaming of Land Ice model

2022-09-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha09: Taylor Hawkins Tribute';git push
	git tag -a 5.1.1-alpha09 -m 'all: FL_LST_IN_APPEND; ncremap: correct_areas, mono3';git push --tags
